--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Image Resizer</title>
+</head>
+<body>
+    <input type="file" id="imageInput">
+    <input type="text" id="widthInput" placeholder="Width">
+    <input type="text" id="heightInput" placeholder="Height">
+    <button onclick="resizeImage()">Save</button>
+    <canvas id="canvas" style="display:none;"></canvas>
+
+    <script>
+        function resizeImage() {
+            const imageInput = document.getElementById('imageInput');
+            const widthInput = document.getElementById('widthInput');
+            const heightInput = document.getElementById('heightInput');
+            const canvas = document.getElementById('canvas');
+
+            const desiredWidth = parseInt(widthInput.value);
+            const desiredHeight = parseInt(heightInput.value);
+
+            if (imageInput.files && imageInput.files[0]) {
+                let reader = new FileReader();
+                reader.onload = function (event) {
+                    let img = new Image();
+                    img.onload = function () {
+                        canvas.width = desiredWidth;
+                        canvas.height = desiredHeight;
+                        let ctx = canvas.getContext('2d');
+                        ctx.drawImage(img, 0, 0, desiredWidth, desiredHeight);
+
+                        // For demonstration purposes, we'll show the image as a new link
+                        let resizedImageURL = canvas.toDataURL("image/png");
+                        let link = document.createElement('a');
+                        link.href = resizedImageURL;
+                        link.download = 'resized-image.png';
+                        link.innerHTML = 'Download Resized Image';
+                        document.body.appendChild(link);
+                    }
+                    img.src = event.target.result;
+                }
+                reader.readAsDataURL(imageInput.files[0]);
+            } else {
+                alert('Please select an image.');
+            }
+        }
+    </script>
+</body>
+</html>
 
